Sprint040|ALPHA-749|Fix gaphic plant block

--- a/app/styles/containers/products/_index.scss
+++ b/app/styles/containers/products/_index.scss
@@ -365,76 +365,6 @@
   }
 }
 
-.container-graphicPlant{
-  margin: 4.5rem 0;
-  .graphicPlant-title{
-    text-transform: uppercase;
-    font-size: $font-size-h5;
-    font-family: $font-family-open-sans-bold; 
-    letter-spacing: 0.1rem;
-  }
-  .container-graphicPlant-block{
-    display: flex;
-    flex-direction: column;
-    .box-graphicPlant{
-      flex: 1;
-      @include lg {
-        margin-right:4rem;
-      }
-      &:nth-of-type(2n){
-        flex: 2;
-        //margin-right: inherit;
-       // display: inline-flex;
-       //position: relative;
-       width: 100%;
-       @include lg {
-         width: 72rem;
-         height: 32rem;
-        }
-        .atm-carousel-arrow--prev {
-          left: 0;
-        }
-        .atm-carousel-arrow--next {
-          right: 0;
-        }
-      }
-      .graphicPlant-subtitle{
-        margin: 4rem 0 2rem 0;        
-        font-size: $font-size-il;
-        font-family: $font-family-nunito-regular;
-        line-height: 1.48;
-        font-weight: lighter;
-        color: $color-almostBlack;
-        @include lg {
-          margin: 2rem 0;
-        }
-      }
-      .fnt-text{
-        font-family: $font-family-open-sans-light; 
-        font-size: $font-size-h6;
-        // margin-bottom: 3rem;
-        color: $color-lightGray;
-        font-weight: 300;
-        line-height: 1.88;
-        margin-bottom: 0;
-        @include lg {
-          margin-bottom: inherit;
-        }
-      }
-      .list-item{
-        color: $color-lightGray;
-        font-weight: 300;
-        line-height: 1.88;
-        font-family: $font-family-open-sans-light; 
-        font-size: $font-size-h6;
-      }
-    }
-    @include lg{
-      flex-direction: row;
-    }
-  }
-}
-
 .opinions-percentual-stars{
   display: flex;
   .opinions-star-number {
